--- a/components/slider/index.module.scss
+++ b/components/slider/index.module.scss
@@ -1,4 +1,4 @@
-.carousel-container {
+.stage-container {
   width: 500px;
   height: 500px;
   border-radius: 0.375rem;
@@ -33,9 +33,9 @@
 }
 
 .nav-button {
-  padding-left: 1rem; /* 16px */
-  padding-right: 1rem; /* 16px */
-  padding-top: 0.5rem; /* 8px */
-  padding-bottom: 0.5rem; /* 8px */
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   font-weight: bold;
 }
