--- a/components/buttons/colorRadioBtn/index.module.scss
+++ b/components/buttons/colorRadioBtn/index.module.scss
@@ -19,13 +19,14 @@
   .swatch {
     display: inline-block;
     vertical-align: middle;
-    height: 30px;
-    width: 30px;
+    height: 17px;
+    width: 17px;
     margin: 0 5px 0 0;
-    background-color: #222;
+    background-color: unset;
     border-radius: 50%;
     margin: 0 10px;
     position: relative;
+
     &:after {
       content: "";
       position: absolute;
@@ -34,7 +35,7 @@
       left: -4px;
       right: -4px;
       bottom: -4px;
-      border: red 2px solid;
+      border: #000 2px solid;
     }
   }
 }
