--- a/components/buttons/textRadioBtn/index.module.scss
+++ b/components/buttons/textRadioBtn/index.module.scss
@@ -1,8 +1,6 @@
 @import "../../../styles/_variables.scss";
 
 .radio-container {
-  margin: 10px;
-
   input[type="radio"] {
     opacity: 0;
     position: fixed;
@@ -12,12 +10,19 @@
   label {
     display: inline-block;
     background-color: $c-white;
-    padding: 10px 20px;
+    min-width: 35px;
+    width: auto;
+    height: 30px;
     font-family: sans-serif, Arial;
-    font-size: 16px;
     box-shadow: 0 0 0 1px #979797;
     border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     cursor: pointer;
+    font-weight: bold;
+    margin: 0 4px 12px;
+    font-size: $app-font-xxs;
   }
 
   label:hover,
