--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,15 +4,15 @@ $c-secondary: #0130a2;
 $c-bg: #fff;
 $c-white: #fff;
 $c-black: #000;
-$c-mat: #72816E;
-$c-res-name: #14142B;
-$c-section-bg: #F7F7FC;
+$c-mat: #72816e;
+$c-res-name: #14142b;
+$c-section-bg: #f7f7fc;
 $transparent: transparent;
-$c-white-o50: rgba(255, 255, 255, .5);
-$c-black-o95: rgba(0, 0, 0, .95);
+$c-white-o50: rgba(255, 255, 255, 0.5);
+$c-black-o95: rgba(0, 0, 0, 0.95);
 $c-primary-black: #0f1010;
-$c-gray : #333;
-
+$c-secondary-black: #2b2b2b;
+$c-gray: #333;
 
 // disable
 $c-secondary-disable: rgba(0, 49, 73, 0.4);
@@ -20,10 +20,10 @@ $c-secondary-disable: rgba(0, 49, 73, 0.4);
 // color's
 $c-alert: #ff4d4f;
 $c-pink: #ffd6ab;
-$c-pink-o55: rgba(255, 214, 171, .55);
+$c-pink-o55: rgba(255, 214, 171, 0.55);
 
 // icon color's
-$c-icon: #4E4B66;
+$c-icon: #4e4b66;
 
 /* border radius */
 $app-primary-radius: 19px;
@@ -32,9 +32,9 @@ $app-sidelong-radius: 4px;
 
 /* font color */
 $c-font-primary: #454545;
-$c-font-secondary: #72816E;
-$c-font-sidelong: #A0A3BD;
-$c-font-strong: #2C3339;
+$c-font-secondary: #72816e;
+$c-font-sidelong: #a0a3bd;
+$c-font-strong: #2c3339;
 
 /* input color */
 $c-input: #666666;
@@ -46,9 +46,9 @@ $c-input-placeholder: #aaaaaa;
  ***** SIZE'S
 ** **/
 // font sizes
-$app-font-xxs: .7rem;
-$app-font-xs: .8rem;
-$app-font-sm: .9rem;
+$app-font-xxs: 0.7rem;
+$app-font-xs: 0.8rem;
+$app-font-sm: 0.9rem;
 $app-font-md: 1rem;
 $app-font-lg: 1.1rem;
 $app-font-xl: 1.2rem;
