--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -38,7 +38,7 @@ $c-font-strong: #2c3339;
 
 /* input color */
 $c-input: #666666;
-$c-input-bg: #f1f6fb;
+$c-input-bg: #f5f5f5;
 $c-tarea-bg: #f5f5f5;
 $c-input-placeholder: #aaaaaa;
 
