--- a/components/slider/index.module.scss
+++ b/components/slider/index.module.scss
@@ -1,41 +1,60 @@
-.stage-container {
-  width: 500px;
-  height: 500px;
-  border-radius: 0.375rem;
+.slider-container {
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.slider-wrap {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.slider-main {
+  width: 100%;
+  height: 100%;
+  display: flex;
   overflow: hidden;
-  position: relative;
 }
 
-.images-container {
+.slider-img-wrap {
   width: 100%;
   height: 100%;
-  position: absolute;
-  display: flex;
-  transition: all;
-  transition-duration: 300ms;
-}
-
-.image-wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative;
+  display: block;
   flex-shrink: 0;
+  flex-grow: 0;
+  transition: translate 300ms ease-in-out;
 }
 
-.image {
-  pointer-events: none;
+.slider-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  max-height: 500px;
 }
 
-.nav-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 8rem;
-}
-
-.nav-button {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.slider-btn {
+  all: unset;
   font-weight: bold;
+  font-size: 60px;
+
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  padding: 1rem;
+  cursor: pointer;
+  transition: all 100ms ease-in-out;
+
+  &:hover {
+    background-color: rgb(0, 0, 0, 0.2);
+  }
+}
+
+.slider-btn-right {
+  right: 0;
+}
+
+.slider-btn-left {
+  left: 0;
 }
