--- a/components/reviews/index.module.scss
+++ b/components/reviews/index.module.scss
@@ -34,6 +34,8 @@
         padding-top: 10px;
         font-size: 14px;
         line-height: 19px;
+        max-height: 400px;
+        overflow: auto;
       }
     }
 
