add a submit btn to reviews section

--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -512,7 +512,7 @@ input[type="number"] {
   border: 1px solid #000;
 
   &:hover {
-    background: $c-secondary-black;
+    background: $c-primary-black;
     color: $c-white;
     transition-delay: 0.25s;
   }
