--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./mixins";
 
 html {
   height: 100%;
@@ -652,6 +653,23 @@ input[type="number"] {
 // padding to body when header is exist
 .with_header {
   padding-top: 60px;
+}
+
+// grid
+
+.grid {
+  margin: 0;
+  padding: 0;
+
+  .grid-item {
+    float: left;
+    width: 100%;
+    min-height: 1px;
+
+    @include mq("md") {
+      width: 50%;
+    }
+  }
 }
 
 /***** animation *****/
