--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -73,3 +73,19 @@ $app-lg-: -25px;
 $app-xl-: -30px;
 $app-xxl-: -35px;
 $app-xxxl-: -40px;
+
+
+$breakpoints: (
+    "xs": 25em,
+    // 400px
+    "sm": 34em,
+    // 544px
+    "md": 48em,
+    // 768px
+    "lg": 60em,
+    // 960px
+    "xl": 80em,
+    // 1280px
+    "xxl": 90em,
+    // 1440px
+);
