--- a/components/productReviews/reviews/index.module.scss
+++ b/components/productReviews/reviews/index.module.scss
@@ -24,6 +24,11 @@
         overflow-wrap: break-word;
       }
 
+      .review-date {
+        font-size: 14px;
+        color: #979797;
+      }
+
       .review-author-name {
         font-size: 1.25rem;
         font-weight: 700;
