--- a/components/productReviews/reviews/index.module.scss
+++ b/components/productReviews/reviews/index.module.scss
@@ -30,7 +30,7 @@
       }
 
       .review-author-name {
-        font-size: 1.25rem;
+        font-size: 16px;
         font-weight: 700;
       }
 
