Increase the size of the product name

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -52,6 +52,7 @@ $app-font-sm: 0.9rem;
 $app-font-md: 1rem;
 $app-font-lg: 1.1rem;
 $app-font-xl: 1.2rem;
+$app-font-xxl: 1.3rem;
 
 // sizes
 $app-xxxs: 2px;
