Add default value option to radio button

--- a/components/buttons/textRadioBtn/index.module.scss
+++ b/components/buttons/textRadioBtn/index.module.scss
@@ -26,7 +26,8 @@
   }
 
   label:hover,
-  input[type="radio"]:focus + label {
+  input[type="radio"]:focus + label,
+  input[type="radio"]:checked + label {
     background-color: $c-primary-black;
     color: $c-white;
   }
