--- a/components/slider/index.module.scss
+++ b/components/slider/index.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/mixins";
+
 .slider-container {
   max-width: 1300px;
   width: 100%;
@@ -22,14 +24,19 @@
   display: block;
   flex-shrink: 0;
   flex-grow: 0;
-  transition: translate 300ms ease-in-out;
+
+  @include mixins.prefix(
+    (
+      transition: translate 300ms ease-in-out,
+    )
+  );
 }
 
 .slider-img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  max-height: 700px; // mobile
+  max-height: 700px;
 }
 
 .slider-btn {
@@ -42,7 +49,12 @@
   bottom: 0;
   padding: 1rem;
   cursor: pointer;
-  transition: all 100ms ease-in-out;
+
+  @include mixins.prefix(
+    (
+      transition: all 100ms ease-in-out,
+    )
+  );
 
   &:hover {
     background-color: rgb(0, 0, 0, 0.2);
